--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,10 +34,24 @@
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('trick_create') }}">Ajouter un Trick</a>
 						</li>
+
+						{% if not app.user %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('security_registration') }}">Inscription</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
+							</li>
+						{% else %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
+							</li>
+						{% endif %}
 					</ul>
 				</div>
 			</div>
 		</nav>
+
 		<div class="container"> {% block body %}{% endblock %}
 			</div>
 
