--- a/templates/trick/show.html.twig
+++ b/templates/trick/show.html.twig
@@ -7,48 +7,44 @@
 	<article>
 		<h2>{{ trick.name }}</h2>
 		<div class="metadata mb-2">
-			Publié le
-			{{ trick.createdAt|date('d/m/Y à H:i') }}
-			| Catégorie :
-			{{ trick.category.name }}</small>
-	</div>
-	<div class="row">
-		{% for picture in trick.pictures %}
-			<img class="col-md-4" src="{{ asset('uploads/pictures/' ~ picture.filename) }}" alt="">
-		{% endfor %}
-	</div>
-
-	<div class="content mb-4">
-		{{ trick.content }}
-	</div>
-</article>
-<section id="comments">
-	<h3>Commentaires</h3>
-	{% for comment in trick.comments %}
-		<div class="mb-4">
-			<div class="col-3">
-				Publié par
-				{{ comment.author.fullname }}
-				le
-				{{ comment.createdAt | date('d/m/Y à H:i') }}
-			</div>
-
-
-			<div class="col">
-				{{ comment.content }}
-			</div>
+			Publié le {{ trick.createdAt|date('d/m/Y à H:i') }} | Catégorie : {{ trick.category.name }}</small>
 		</div>
-	{% endfor %}
+		<div class="row">
+			{% for picture in trick.pictures %}
+				<img class="col-md-4" src="{{ asset('uploads/pictures/' ~ picture.filename) }}" alt="">
+			{% endfor %}
+		</div>
+		<div class="content my-4">
+			{{ trick.content }}
+		</div>
+		<div class="row">
+			{% for video in trick.videos %}
+				{{ embed_video(video.url, video.title)|raw }}
+			{% endfor %}
+		</div>
+	</article>
+	<section id="comments">
+		<h3>{{ trick.comments | length }} Commentaires</h3>
+		{% for comment in trick.comments %}
+			<div class="mb-4">
+				<div class="col-3">
+					Publié par {{ comment.author.fullname }} le {{ comment.createdAt | date('d/m/Y à H:i') }}
+				</div>
+				<div class="col">
+					{{ comment.content }}
+				</div>
+			</div>
+		{% endfor %}
 
-	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
-		{{ form_start(commentForm) }}
-		{{ form_row(commentForm.content, {'attr': {'placeholder': "Contenu du commentaire"}}) }}
+		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+			{{ form_start(commentForm) }}
+			{{ form_row(commentForm.content, {'attr': {'placeholder': "Contenu du commentaire"}, 'label' : false}) }}
 
-		<button type="submit" class="btn btn-success">Commenter</button>
+			<button type="submit" class="btn btn-success">Commenter</button>
 
-		{{ form_end(commentForm) }}
-	{% else %}
-		<a href="{{ path('security_login') }}" class="btn btn-success" role="button">Connectez-vous pour commenter cet article</a>
-	{% endif %}
-
-</section>{% endblock %}
+			{{ form_end(commentForm) }}
+		{% else %}
+			<a href="{{ path('security_login') }}" class="btn btn-success" role="button">Connectez-vous pour commenter cet article</a>
+		{% endif %}
+	</section>
+{% endblock %}
