--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,8 +7,9 @@
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
 		<link
-		rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
+		rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
@@ -19,7 +20,7 @@
 		{% endblock %}
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="{{ path('tricks_all') }}">SnowTricks</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,8 +53,14 @@
 			</div>
 		</nav>
 
+		<div>
+			{% block header %}{% endblock %}
+		</div>
+
 		<div class="container"> {% block body %}{% endblock %}
 			</div>
 
 		</body>
+		<script src="https://kit.fontawesome.com/e1fcaad2db.js" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</html>
