--- a/templates/trick/index.html.twig
+++ b/templates/trick/index.html.twig
@@ -3,10 +3,60 @@
 {% block title %}Hello TrickController!
 {% endblock %}
 
+{% block header %}
+	<header class="index-header">
+		<div class="container h-100">
+			<div class="row h-100 align-items-center">
+				<div class="col-12 text-center">
+					<h1 class="fw-light">Welcome to SnowTricks</h1>
+					<p class="lead">The best way to become a freestyler</p>
+				</div>
+			</div>
+		</div>
+	</header>
+{% endblock %}
+
 {% block body %}
-	{% for trick in tricks %}
-		<h1>{{ trick.name }}</h1>
-		<p>{{ trick.content }}</p>
-		<a href="{{ path('trick_show', {'slug': trick.slug}) }}" class="btn btn-primary">Details</a>
-	{% endfor %}
+	<div class="row">
+		{% for trick in tricks %}
+			<div class="card-group col-lg-3 mt-4">
+				<div class="card" style="width: 18rem;">
+					{% for picture in trick.pictures %}
+						{% if picture.isMain == true %}
+							<a href="{{ path('trick_show', {'slug': trick.slug}) }}"><img src="{{ asset('uploads/pictures/' ~ picture.filename) }}" class="img-fluid" alt=" {{ trick.name }} "></a>
+						{% endif %}
+					{% endfor %}
+					<div class="card-body {{ app.user != true ? 'text-center' }}">
+						<a href="{{ path('trick_show', {'slug': trick.slug}) }}" class="card-link text-decoration-none">{{ trick.name }}</a>
+						{% if app.user %}
+							<a href="{{ path('trick_update', {'slug': trick.slug}) }}" class="card-link text-decoration-none">
+								<i class="fa-solid fa-pen-to-square"></i>
+							</a>
+							<a href="{{ path('trick_delete', {'slug': trick.slug}) }}" class="card-link text-decoration-none" data-bs-toggle="modal" data-bs-target="#deleteModal" onclick="return window.confirm('Voulez-vous vraiment supprimer ce trick : {{ trick.name }} ?')">
+								<i class="fas fa-trash"></i>
+							</a>
+						{% endif %}
+					</div>
+				</div>
+			</div>
+			<!-- Modal -->
+			<div class="modal fade" id="deleteModal" tabindex="-1" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title">Voulez-vous vraiment supprimer ce trick ?</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<div class="modal-body">
+							{{ dump(trick) }}
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+							<a href="{{ path('trick_delete', {'slug': trick.slug}) }}" type="button" class="btn btn-danger">Confirmer</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		{% endfor %}
+	</div>
 {% endblock %}
