--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,14 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}
+				SnowTricks
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-		<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
-		<link
-		rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
-		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		<link rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -20,8 +21,8 @@
 		{% endblock %}
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+			<div class="container">
 				<a class="navbar-brand" href="{{ path('tricks_all') }}">SnowTricks</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -57,8 +58,9 @@
 			{% block header %}{% endblock %}
 		</div>
 
-		<div class="container"> {% block body %}{% endblock %}
-			</div>
+		<div class="container my-4">
+			{% block body %}{% endblock %}
+		</div>
 
 		</body>
 		<script src="https://kit.fontawesome.com/e1fcaad2db.js" crossorigin="anonymous"></script>
