--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -4,9 +4,10 @@
 	<h1>Créer un compte</h1>
 	<hr>
 	{{ form_start(form) }}
-	{{ form_row(form.fullname, {'attr': {'placeholder': "Nom et prénom"}}) }}
-	{{ form_row(form.email, {'attr': {'placeholder': "Adresse email"}}) }}
-	{{ form_row(form.password, {'attr': {'placeholder': "Mot de passe"}}) }}
+	{{ form_row(form.avatar) }}
+	{{ form_row(form.fullname, {'attr': {'placeholder': "Nom et prénom"}, 'label' : false}) }}
+	{{ form_row(form.email, {'attr': {'placeholder': "Adresse email"}, 'label' : false}) }}
+	{{ form_row(form.password) }}
 
 	<button type="submit" class="btn btn-success">Inscription</button>
 
