--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,11 +1,20 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+	{% if error %}
+        <div class="alert alert-warning alert-dismissible fade show rounded-0 border-0" role="alert">
+			<div class="text-center lead">
+				<i class="bi bi-exclamation-square"></i> {{ error.messageKey|trans(error.messageData, 'security') }}
+			</div>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+    {% endif %}
+
 	<h1>Connexion</h1>
 
-	<form action="{{ path('security_login') }}" method="post">
+	<form action="{{ path('app_login') }}" method="post">
 		<div class="form-group">
-			<input type="email" class="form-control" placeholder="Email" name="_username" required>
+			<input type="email" class="form-control" placeholder="Email" name="_username" value="{{ last_username }}" required>
 		</div>
 		<div class="form-group">
 			<input type="password" class="form-control" placeholder="Mot de passe" name="_password" required>
@@ -17,4 +26,6 @@
 			<button type="submit" class="btn btn-success">Connexion</button>
 		</div>
 	</form>
+
+	<a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
 {% endblock %}
