--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,3 +7,11 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Playfair Display', serif;
+}
+
+* {
+  font-family: 'Poppins', sans-serif;
+}
