--- a/templates/trick/show.html.twig
+++ b/templates/trick/show.html.twig
@@ -7,139 +7,127 @@
 {% block body %}
 	{# Start : Trick content #}
 	<article>
-		<h2>{{ trick.name }}</h2>
-		<div class="row">
-			{% for picture in trick.pictures %}
-				{% if picture.isMain == true %}
-					<div class="col-md-12">
-						<img class="mb-4 img-fluid rounded" src="{{ asset('uploads/pictures/' ~ picture.filename) }}" alt="">
-					</div>
-				{% endif %}
-			{% endfor %}
-		</div>
+		<h2 class="d-inline">{{ trick.name }}</h2>
+		{% if is_granted('ROLE_USER') %}
+			<a href="{{ path('trick_edit', {'slug': trick.slug}) }}" class="text-decoration-none d-inline">
+				| Modifier |
+			</a>
+			<a href="{{ path('trick_delete', {'slug': trick.slug}) }}" class="text-danger text-decoration-none d-inline" onclick="return window.confirm('Voulez-vous vraiment supprimer ce trick : {{ trick.name }} ?')">
+				Supprimer
+			</a>
+		{% endif %}
 
-		{% if trick.pictures.count > 1 or trick.videos.count >= 1 %}
-			<div>
-				{% if trick.pictures.count > 1 %}
-					<div class="accordion" id="accordionExample">
-						<div class="accordion-item">
-						<h2 class="accordion-header" id="headingOne">
-							<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-								Photos
-							</button>
-						</h2>
-						<div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-							<div class="accordion-body row">
-								{% for picture in trick.pictures %}
-									{% if picture.isMain == false %}
-										<div class="col-md-3">
-											<img class="mb-4 img-fluid rounded" src="{{ asset('uploads/pictures/' ~ picture.filename) }}" alt="">
+		{% for picture in trick.pictures %}
+			{% if picture.isMain == true %}
+				<div class="ratio ratio-16x9 mt-4">
+					<div class="rounded-top" style="background: transparent url({{ asset('uploads/pictures/' ~ picture.filename) }}); background-position:center top; background-repeat:no-repeat; background-size:cover;"></div>
+				</div>
+			{% endif %}
+		{% endfor %}
+
+		<div class="accordion" id="accordion-flush">
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="flush-headingOne">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+						Photos
+					</button>
+				</h2>
+				<div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordion-flush">
+					<div class="accordion-body row">
+						{% if trick.pictures.count > 1 %}
+							{% for picture in trick.pictures %}
+								{% if picture.isMain == false %}
+									<div class="col-md-3 mt-2">
+										<div class="ratio ratio-4x3">
+											<div style="background: transparent url({{ asset('uploads/pictures/' ~ picture.filename) }}); background-position:center top; background-repeat:no-repeat; background-size:cover;"></div>
 										</div>
-									{% endif %}
-								{% endfor %}
-							</div>
-						</div>
-					</div>
-				{% endif %}
-				{% if trick.videos.count >= 1 %}
-				<div class="accordion-item">
-					<h2 class="accordion-header" id="headingTwo">
-						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-							Vidéos
-						</button>
-					</h2>
-					<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-						<div class="accordion-body row">
-							{% for video in trick.videos %}
-								{{ embed_video(video.url, video.title)|raw }}
+										{% if is_granted('ROLE_USER') %}
+											<div class="text-center small mb-2 border">
+												<a href="{{ path('picture_delete', {'slug' : trick.slug, 'id' : picture.id }) }}" class="link-danger text-decoration-none">Supprimer</a>
+											</div>
+										{% endif %}
+									</div>
+								{% endif %}
 							{% endfor %}
+						{% endif %}
+						<div class="col-md-1">
+							<a class="btn btn-primary mt-2" href="{{ path('picture_add', {'slug' : trick.slug}) }}"><i class="fa-solid fa-plus fa-2xl"></i></a>
 						</div>
 					</div>
 				</div>
-				{% endif %}
 			</div>
-		{% endif %}
-
+			<div class="accordion-item">
+				<h2 class="accordion-header" id="flush-headingTwo">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+					Vidéos
+				</button>
+				</h2>
+				<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordion-flush">
+					<div class="accordion-body row">
+						{% if trick.videos.count >= 1 %}
+							{% for video in trick.videos %}
+								<div class="col-md-4 mb-3">
+									{{ embed_video(video.url, video.title)|raw }}
+									{% if is_granted('ROLE_USER') %}
+										<div class="text-center small border">
+											<a href="{{ path('video_delete', {'slug' : trick.slug, 'id' : video.id }) }}" class="link-danger text-decoration-none">Supprimer</a>
+										</div>
+									{% endif %}
+								</div>
+							{% endfor %}
+						{% endif %}
+						<div class="col-md-1">
+							<a class="btn btn-primary" href="{{ path('video_add', {'slug' : trick.slug}) }}"><i class="fa-solid fa-plus fa-2xl"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<div class="px-2 py-4" style="text-align: justify;">
 			{{ trick.content|nl2br }}
 		</div>
 
-		<div class="text-center py-3">
-			<span class="badge rounded-pill bg-info p-2 mx-2 fs-6"><i class="fa-solid fa-tag"></i> Catégorie : {{ trick.category.name }}</span>
-			<span class="badge rounded-pill bg-info p-2 mx-2 fs-6"><i class="fa-solid fa-circle-plus"></i> Publié : {{ trick.createdAt|date('d/m/Y | H:i') }}</span>
+		<div class="text-center py-2">
+			<span class="badge rounded-pill bg-info p-2 mx-2 fs-6 mb-2">
+				<i class="fa-solid fa-tag"></i> Catégorie : {{ trick.category.name }}
+			</span>
+			<span class="badge rounded-pill bg-info p-2 mx-2 fs-6 mb-2">
+				<i class="fa-solid fa-circle-plus"></i> Publié : {{ trick.createdAt|date('d/m/Y | H:i') }}
+			</span>
 
 			{% if trick.updatedAt is not null %}
-				<span class="badge rounded-pill bg-info p-2 mx-2 fs-6"><i class="fa-solid fa-rotate-right"></i> Mis à jour : {{ trick.updatedAt|date('d/m/Y | H:i') }}</span>
+				<span class="badge rounded-pill bg-info p-2 mx-2 fs-6">
+					<i class="fa-solid fa-rotate-right"></i> Mis à jour : {{ trick.updatedAt|date('d/m/Y | H:i') }}
+				</span>
 			{% endif %}
 		</div>
-
 	</article>
 	{# End : Trick content #}
 
 	{# Start : Comment form + Comments content #}
-	<section class="py-4 px-2">
-		<div class="border border-light rounded p-2">
+	<section class="py-2 px-2 border rounded">
+		<div>
 			{# Start : Check if the user is authenticated #}
-			{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+			{% if is_granted('ROLE_USER') %}
 				{{ form_start(commentForm) }}
 				{{ form_row(commentForm.content, {'attr': {'placeholder': 'Contenu du commentaire'}, 'label' : false}) }}
 				<button type="submit" class="btn btn-success form-control">Commenter</button>
 				{{ form_end(commentForm) }}
 			{% else %}
 				<div class="text-center">
-					<a href="{{ path('security_login') }}" class="btn btn-success btn-lg" role="button">Connectez-vous pour commenter cet article</a>
+					<a href="{{ path('app_login') }}" class="btn btn-success" role="button">Connectez-vous pour commenter cet article</a>
 				</div>
-
 			{% endif %}
 			{# End : Check if the user is authenticated #}
 		</div>
 
-		<div class="p-2 my-4 border border-light rounded">
-			{# Start : Display comments content #}
-			<h3 class="text-center py-2">{{ comments.count > 0 ? comments.count ~ ' commentaires' : 'Aucun commentaire' }}</h3>
-			{% for comment in comments.iterator %}
-				<div class="card font-monospace my-2">
-					<h5 class="card-header small text-secondary">
-						{{ comment.author.fullname }} | {{ comment.createdAt | date('d/m/Y | H:i') }}
-					</h5>
-					<div class="card-body">
-						<p class="card-text">{{ comment.id }} | {{ comment.content | nl2br }}</p>
-					</div>
-
-					{% if is_granted('IS_AUTHENTICATED_FULLY') and app.user.email == comment.author.email %}
-						<div class="card-footer text-end">
-							<a href="#" class="link-danger text-decoration-none">Supprimer</a>
-						</div>
-					{% endif %}
-				</div>
-			{% endfor %}
-			{# End : Display comments content #}
-		</div>
+		{# Start : Paginated comments #}
+		{{ render(path('comments_paginated', {
+			'page' : app.request.get('page'),
+			'slug' : trick.slug
+		})) }}
+		{# End : Paginated comments #}
 	</section>
 	{# End : Comment form + Comments content #}
-
-	{% if lastPage > 1 %}
-		{# Start : Pagination system #}
-		<div>
-			<nav>
-				<ul class="pagination justify-content-center">
-					<li class="page-item {{ currentPage <= 1 ? 'disabled' }}">
-						<a class="page-link" href="{{ path('trick_show_paginated', {'slug': trick.slug, 'page': currentPage != 1 ? currentPage - 1 : 1}) }}">Précédente</a>
-					</li>
-
-					{% for page in range(1, lastPage) %}
-						<li class="page-item {{ currentPage == page ? 'active' : '' }}">
-							<a class="page-link" href="{{ path('trick_show_paginated', {'slug': trick.slug, 'page': page}) }}">{{ page }}</a>
-						</li>
-					{% endfor %}
-
-					<li class="page-item {{ currentPage >= lastPage ? 'disabled' }}">
-						<a class="page-link" href="{{ path('trick_show_paginated', {'slug': trick.slug, 'page': currentPage != lastPage ? currentPage + 1 : lastPage}) }}">Suivante</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-		{# End : Pagination system #}
-	{% endif %}
 {% endblock %}
