--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,16 +13,16 @@
 	<h1>Connexion</h1>
 
 	<form action="{{ path('app_login') }}" method="post">
-		<div class="form-group">
+		<div class="mb-3">
 			<input type="email" class="form-control" placeholder="Email" name="_username" value="{{ last_username }}" required>
 		</div>
-		<div class="form-group">
+		<div class="mb-3">
 			<input type="password" class="form-control" placeholder="Mot de passe" name="_password" required>
 		</div>
-		<div class="form-group">
+		<div class="mb-3">
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 		</div>
-		<div class="form-group">
+		<div class="mb-3">
 			<button type="submit" class="btn btn-success">Connexion</button>
 		</div>
 	</form>
