--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,16 +8,16 @@
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-		<link rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+		<link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
 
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
-		{% endblock %}
-
-		{% block javascripts %}
-			{{ encore_entry_script_tags('app') }}
 		{% endblock %}
 	</head>
 	<body>
@@ -34,25 +34,48 @@
 							<a class="nav-link" href="{{ path('tricks_all') }}">Accueil</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path('trick_create') }}">Ajouter un Trick</a>
+							<a class="nav-link" href="{{ path('trick_add') }}">Ajouter un Trick</a>
 						</li>
 
-						{% if not app.user %}
+						{% if not is_granted('ROLE_USER') %}
 							<li class="nav-item">
-								<a class="nav-link" href="{{ path('security_registration') }}">Inscription</a>
+								<a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
+								<a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
 							</li>
 						{% else %}
 							<li class="nav-item">
-								<a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
+								<a class="nav-link" href="{{ path('user_show', {'id' : app.user.id}) }}">Profil</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
 							</li>
 						{% endif %}
 					</ul>
 				</div>
 			</div>
 		</nav>
+
+		{% block flashMessages %}
+			{% for label, messages in app.flashes() %}
+				{% if label == 'info' %}
+					{% set icon = 'bi bi-info-square' %}
+				{% elseif label == 'success' %}
+					{% set icon = 'bi bi-check-square' %}
+				{% else %}
+					{% set icon = 'bi bi-exclamation-square' %}
+				{% endif %}
+				{% for message in messages %}
+					<div class="alert alert-{{ label }} alert-dismissible fade show rounded-0 border-0 mb-0 " role="alert">
+						<div class="text-center lead">
+							<i class="{{ label == 'info' ? 'bi bi-info-square' : 'bi bi-check-square' }}"></i> {{ message | raw }}
+						</div>
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+					</div>
+				{% endfor %}
+			{% endfor %}
+		{% endblock %}
 
 		<div>
 			{% block header %}{% endblock %}
@@ -62,7 +85,20 @@
 			{% block body %}{% endblock %}
 		</div>
 
-		</body>
-		<script src="https://kit.fontawesome.com/e1fcaad2db.js" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		{% block footer %}
+			<footer class="bg-light text-center text-lg-start">
+				<div class="text-center p-3">
+					<a class="text-decoration-none" href="https://www.linkedin.com/in/jonathan-secher-43b851225/" target="_blank">Jonathan Secher</a>
+					&copy; {{ 'now' | date('Y') }}
+				</div>
+			</footer>
+		{% endblock %}
+
+	</body>
+
+		{% block javascripts %}
+			<script src="https://kit.fontawesome.com/e1fcaad2db.js" crossorigin="anonymous"></script>
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		{% endblock %}
 	</html>
