Add JS form fields counter for trick and registration

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,12 +12,35 @@
 	<h1>Créer un compte</h1>
 	<hr>
 	{{ form_start(registrationForm) }}
-	{{ form_row(registrationForm.fullname, {'attr': {'placeholder': "Nom et prénom"}, 'label' : false}) }}
-	{{ form_row(registrationForm.email, {'attr': {'placeholder': "Adresse email"}, 'label' : false}) }}
-	{{ form_row(registrationForm.password) }}
+		<div class="mb-3">
+			{{ form_widget(registrationForm.fullname, {'attr': {'placeholder': "Nom et prénom"}, 'label' : false}) }}
+			{{ form_errors(registrationForm.fullname) }}
+			<div id="registration-fullname-result" class="d-block"></div>
+		</div>
 
-	<button type="submit" class="btn btn-success">Inscription</button>
+		{{ form_row(registrationForm.email, {'attr': {'placeholder': "Adresse email"}, 'label' : false}) }}
+
+		<div class="mb-3">
+			{{ form_widget(registrationForm.password.first) }}
+			{{ form_errors(registrationForm.password.first) }}
+			<div id="registration-password-first-result" class="d-block"></div>
+		</div>
+
+		<div class="mb-3">
+			{{ form_widget(registrationForm.password.second) }}
+			{{ form_errors(registrationForm.password.second) }}
+			<div id="registration-password-second-result" class="d-block"></div>
+		</div>
+
+		<button type="submit" class="btn btn-success">Inscription</button>
 
 	{{ form_end(registrationForm) }}
+{% endblock %}
+
+{% block javascripts %}
+	{{ parent() }}
+	<script src="{{ asset('assets/js/manage-videos-collection.js') }}"></script>
+	<script src="{{ asset('assets/js/count-field-char.js') }}"></script>
+	<script src="{{ asset('assets/js/valid-registration-form.js') }}"></script>
 {% endblock %}
 
