--- a/templates/trick/add.html.twig
+++ b/templates/trick/add.html.twig
@@ -7,9 +7,18 @@
 			{{ form_row(form.mainPicture) }}
 		</div>
 
-		{{ form_row(form.name, {'attr': {'placeholder': "Nom du trick"}, 'label' : false}) }}
-		{{ form_errors(form.name) }}
-		{{ form_row(form.content, {'attr': {'placeholder': "Description du trick"}, 'label' : false}) }}
+		<div class="mb-3">
+			{{ form_widget(form.name, {'attr': {'placeholder': "Nom du trick"}, 'label' : false}) }}
+			{{ form_errors(form.name) }}
+			<div id="trick-name-result" class="d-block"></div>
+		</div>
+
+		<div class="mb-3">
+			{{ form_row(form.content, {'attr': {'placeholder': "Description du trick"}, 'label' : false}) }}
+			{{ form_errors(form.content) }}
+			<div id="trick-content-result" class="d-block"></div>
+		</div>
+
 		{{ form_row(form.category, {'label' : false}) }}
 
 		<div class="border rounded p-3 mb-3">
@@ -34,4 +43,6 @@
 {% block javascripts %}
 	{{ parent() }}
 	<script src="{{ asset('assets/js/manage-videos-collection.js') }}"></script>
+	<script src="{{ asset('assets/js/count-field-char.js') }}"></script>
+	<script src="{{ asset('assets/js/valid-trick-form.js') }}"></script>
 {% endblock %}
