Update form views

--- a/templates/trick/edit.html.twig
+++ b/templates/trick/edit.html.twig
@@ -10,7 +10,7 @@
 		</div>
 
 		<div class="mb-3">
-			{{ form_row(form.content, {'attr': {'placeholder': "Description du trick"}, 'label' : false}) }}
+			{{ form_widget(form.content, {'attr': {'placeholder': "Description du trick"}, 'label' : false}) }}
 			{{ form_errors(form.content) }}
 			<div id="trick-content-result" class="d-block"></div>
 		</div>
