--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,4 @@
-.index-header {
+#index-header {
   height: 100vh;
   min-height: 500px;
   color: white;
@@ -14,4 +14,14 @@ h1, h2, h3, h4, h5, h6 {
 
 * {
   font-family: 'Poppins', sans-serif;
+}
+
+#btn-back-to-top {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  z-index: 10;
 }
